# ch355

./: .gitignore  HOWTO.md  README.md  docker-compose.yml  env_template  main.py  pyproject.toml
api/: __init__.py  router.py  utils.py
api/_bruno_ch355/: opencollection.yml  root.yml
api/_bruno_ch355/auth/: create match.yml  delete match.yml  google login.yml  list open matches.yml  me - 2.yml  me.yml  refresh access token.yml
api/_bruno_ch355/environments/: ch355.yml
api/_bruno_ch355/match/: create match.yml  delete match.yml  folder.yml  get match state.yml  join match - acquire seat.yml  list open matches - 2.yml  list open matches.yml  resign.yml
api/auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  utils.py
api/game/: __init__.py  engine.py  manager.py  router.py  schemas.py
api/match/: __init__.py  models.py  router.py  schemas.py  utils.py
ch355-client/: README.md  env_template  package-lock.json  package.json  svelte.config.js
ch355-client/src/: app.d.ts
ch355-client/src/lib/: api.ts  index.ts  (+2 more)
config/: __init__.py  config.py  z1_oauth_creation.md  z2_oauth_playground.md  z3_alembic_dbinit.md
config/validators/: __init__.py  storage.py  uvicorn.py
migrations/: env.py
migrations/versions/: 0581c2ad4062_create_users_table.py  70816d0e2650_add_stateless_match_clocks.py  9a3accdf4dd7_initial_uuid_schema.py  b4596ea556a7_create_match_table.py  b752a389d8f9_add_match_status_enum.py  c065ce81b12c_add_match_rating_outcomes.py
services/: __init__.py  database.py  logger.py  postgres.py  redis.py
tests/ws/: test_ws.html
(+4 files in other folders)
