[project]
name = "ch355"
version = "0.1.0"
description = "Game backend for multiplayer chess."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "google-auth>=2.53.0",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
]
